--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,12 @@
 );
 :root{
     --primary-clr: #fcfbfb;
-    --secondary-clr: #242446;
+    --secondary-clr: #09095e;
     --accent-clr: #e73755;
     --accent-clr-2: #3d3d58;
-    --txt-clr: #2c2c38;
+    --txt-clr: #09095e;
     --txt-clr-2: #ffffff;
-    --txt-clr-3: #4d4a4a;
+    --txt-clr-3: #111111;
     --font: "Tuffy", sans-serif;
     --font-2: "Poppins", sans-serif;
     --font-3: "Roboto", sans-serif;;
@@ -19,13 +19,14 @@
 }
 body{
     background: var(--primary-clr);
-    color: var(--txt-clr);
-    font-family: var(--font);
+    color: var(--txt-clr-3);
+    font-family: var(--font-3);
 }
 nav{
     width: 100%;
-    padding: 1rem;
-    font-family: var(--font-2);
+    padding: 1rem 2rem;
+    padding-left: 0.5rem;
+    font-family: var(--font);
     position: relative;
 }
 nav .logo img{
@@ -37,12 +38,14 @@ nav .logo img{
     margin-top: 2rem;
     z-index: 1;
     background: var(--primary-clr);
+    font-family: var(--font-2);
 }
 .navLinks{
     display: flex;
     flex-direction: column;
     row-gap: 1.5rem;
     list-style: none;
+    padding: 0rem 1rem;
 }
 .navLinks li a{
     text-decoration: none;
@@ -90,6 +93,94 @@ nav .logo img{
 #navToggleCheckbox:checked ~.navToggle .closeNav{
     display: block;
 }
+
+
+.hero-section{
+    padding: 1rem;
+    padding-bottom: 0rem;
+    padding-left: 1.5rem;
+    margin-top: 3rem;
+}
+.heroContent1{
+    width: 100%
+}
+.heroContent1 >p:nth-child(1){
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: 300;
+}
+.heroContent1 >p:nth-child(1) span:first-of-type{
+    color: var(--accent-clr);
+    margin-right: 0.5rem;
+    font-weight: 800;
+    font-size: 1.2rem;
+}
+.heroContent1 >p:nth-child(2){
+    margin-top: 2rem;
+    color: var(--secondary-clr);
+    font-size: 2.5rem;
+    font-weight: 700;
+    padding-right: 1rem;
+}
+.heroContent1 >p:nth-child(3){
+    margin-top: 1rem;
+    font-size: 1rem;
+    font-weight: 300;
+    line-height: 1.4rem;
+}
+.heroContent1 button{
+    background: var(--accent-clr);
+    margin-top: 1.5rem;
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 0.2rem;
+    font-family: var(--font-2);
+    text-align: center;
+}
+.heroContent1 button a{
+    text-decoration: none;
+    color: var(--txt-clr-2);
+    font-weight: 700;
+}
+.heroContent1 button a i{
+    color: var(--accent-clr);
+    background: var(--primary-clr);
+    border-radius: 50%;
+    margin-left: 0.1rem;
+    font-size: 0.8rem;
+}
+.heroContent1 >div{
+    margin-top: 3.5rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+}
+.heroContent1 >div p{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 1rem;
+}
+.heroContent1 >div p span:first-of-type{
+    background: var(--secondary-clr);
+    color: var(--primary-clr);
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.heroContent1 >div p span:last-of-type{
+    font-weight: 300;
+}
+.heroContent2{
+    width: 100%;
+    margin-top: 5rem;
+}
+.heroContent2 img{
+    width: 100%;
+}
 @media (width >=1440px){
     nav{
         display: flex;
@@ -123,6 +214,53 @@ nav .logo img{
     }
     .navToggle{
         display: none;
+    }
+    .hero-section{
+        display: flex;
+        margin-left: 5rem;
+        margin-top: 5rem;
+    }
+    .heroContent1{
+        width: 45%;
+        margin-top: 3rem;
+    }
+    .heroContent2{
+        width: 55%;
+        margin-top: 0;
+    }
+    .heroContent1 >p:nth-child(1){
+        font-size: 1.1rem;
+        font-weight: 400;
+    }
+    .heroContent1 >p:nth-child(2){
+        font-size: 3.5rem;
+        width: 90%;
+    }
+    .heroContent1 >p:nth-child(3){
+        width: 80%;
+        font-weight: 400;
+    }
+    .heroContent1 button{
+        font-size: 1rem;
+    }
+    .heroContent1 >div{
+        flex-direction: row;
+        column-gap: 1rem;
+        row-gap: 0rem;
+        align-items: center;
+    }
+    .heroContent1 >div p{
+        flex-direction: row;
+        column-gap: 1rem;
+        row-gap: 0rem;
+        align-items: center;
+    }
+    .heroContent1 >div p span:first-of-type{
+        width: 20%;
+        height: 3rem;
+    }
+    .heroContent1 >div p span:last-of-type{
+        width: 50%;
     }
 }
 @media (width <=768px) and (orientation:landscape){
