--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     --primary-clr: #fcfbfb;
     --secondary-clr: #09095e;
     --accent-clr: #e73755;
-    --accent-clr-2: #3d3d58;
+    --accent-clr-2: #2f2f79;
     --txt-clr: #09095e;
     --txt-clr-2: #ffffff;
     --txt-clr-3: #111111;
@@ -117,7 +117,7 @@ nav .logo img{
 }
 .heroContent1 >p:nth-child(2){
     margin-top: 2rem;
-    color: var(--secondary-clr);
+    color: var(--txt-clr);
     font-size: 2.5rem;
     font-weight: 700;
     padding-right: 1rem;
@@ -181,7 +181,90 @@ nav .logo img{
 .heroContent2 img{
     width: 100%;
 }
-@media (width >=1440px){
+
+
+.why-choose-us-section{
+    color: var(--primary-clr);
+    padding-top: 5rem;
+    position: relative;
+    overflow: hidden;
+    transform: translateY(-3rem);
+}
+.whyChooseUsCurve{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    z-index: 1;
+    transform: rotate(180deg);
+}
+.whyChooseUsContent{
+    background: var(--secondary-clr);
+    transform: translateY(-2rem);
+    padding-top: 5rem;
+    padding-bottom: 4rem;
+}
+.whyChooseUsContent h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+    column-gap: 0.5rem;
+}
+.whyChooseUsContent h1>i:nth-child(1), i:nth-child(2){
+    width: 2px;
+    height: 15px;
+    background: var(--accent-clr);
+    transform: rotate(22.5deg);
+}
+.whyChooseUsContent >p{
+    margin-top: 0.5rem;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 800;
+}
+.whyChoooseDetails{
+    margin-top: 3rem;
+    padding: 1rem 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 2.5rem;
+}
+.whyChoosedetail{
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.3rem;
+}
+.whyChoosedetail >span{
+    width: 4rem;
+    height: 4rem;
+    background: var(--accent-clr-2);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.whyChoosedetail p{
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+}
+.whyChoosedetail p span:first-of-type{
+    font-size: 1rem;
+    font-weight: 900;
+    letter-spacing: 1px;
+}
+.whyChoosedetail p span:last-of-type{
+    font-size: 0.9rem;
+    font-weight: 300;
+}
+
+@media (width >=1024px){
     nav{
         display: flex;
         justify-content: space-between;
@@ -230,7 +313,7 @@ nav .logo img{
     }
     .heroContent1 >p:nth-child(1){
         font-size: 1.1rem;
-        font-weight: 400;
+        font-weight: 200;
     }
     .heroContent1 >p:nth-child(2){
         font-size: 3.5rem;
@@ -238,16 +321,18 @@ nav .logo img{
     }
     .heroContent1 >p:nth-child(3){
         width: 80%;
-        font-weight: 400;
+        font-weight: 300;
     }
     .heroContent1 button{
         font-size: 1rem;
     }
     .heroContent1 >div{
+        width: 100%;
         flex-direction: row;
-        column-gap: 1rem;
+        column-gap: 0rem;
         row-gap: 0rem;
         align-items: center;
+        transform: translateX(-2.4rem);
     }
     .heroContent1 >div p{
         flex-direction: row;
@@ -256,11 +341,51 @@ nav .logo img{
         align-items: center;
     }
     .heroContent1 >div p span:first-of-type{
-        width: 20%;
-        height: 3rem;
+        width: 4rem;
+        height: 4rem;
     }
     .heroContent1 >div p span:last-of-type{
         width: 50%;
+        font-weight: 300;
+    }
+
+
+    .whyChooseUsContent{
+        padding-top: 7rem;
+    }
+    .whyChooseUsContent h1{
+        font-size: 1.1rem;
+        margin-bottom: 0.5rem;
+    }
+    .whyChooseUsContent >p{
+        font-size: 2.5rem;
+        width: 50%;
+        margin: 0 auto;
+    }
+    .whyChoooseDetails{
+        width: 90%;
+        padding: 1.5rem;
+        margin-left: 7rem;
+        flex-direction: row;
+        justify-content: center;
+        row-gap: 0rem;
+        column-gap: 2rem;
+    }
+    .whyChoosedetail{
+        flex-direction: row;
+        column-gap: 1rem;
+        row-gap: 0rem;
+    }
+    .whyChoosedetail >span{
+        width: 6rem;
+    }
+    .whyChoosedetail p span:first-of-type{
+        font-size: 1.2rem;
+    }
+    .whyChoosedetail p span:last-of-type{
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5rem;
     }
 }
 @media (width <=768px) and (orientation:landscape){
@@ -271,41 +396,8 @@ nav .logo img{
         right: 2rem;
         top: 1.5rem;
     }
+    .heroContent1 >p:nth-child(2){
+        font-size: 2.9rem;
+    }
     
-}
-
-@media (width >=1024px) and (orientation:landscape){
-    nav{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1rem 0;
-        padding-left: 7rem;
-        padding-right: 8rem;
-    }
-    nav .logo img{
-        margin-left: 0rem;
-    }
-    .navBtns{
-        display: flex;
-        align-items: center;
-        column-gap: 17rem;
-        margin-top: 0;
-    }
-    .navLinks{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        column-gap: 3rem;
-        margin-top: 0;
-    }
-    .navLinks li a:hover{
-        border-bottom: 1px solid var(--accent-clr);
-    }
-    .navBtns button{
-        display: block;
-    }
-    .navToggle{
-        display: none;
-    }
 }
