--- a/styles.css
+++ b/styles.css
@@ -399,5 +399,10 @@ nav .logo img{
     .heroContent1 >p:nth-child(2){
         font-size: 2.9rem;
     }
-    
+    .whyChooseUsContent >p{
+        font-size: 2.4rem;
+    }
+    .whyChoosedetail p span:last-of-type{
+        font-size: 1rem;
+    }
 }
